OOZIE-725 Increase JVM MaxPermSize value for the testcases (tucu)
git-svn-id: https://svn.apache.org/repos/asf/incubator/oozie/trunk@1295416 13f79535-47bb-0310-9956-ffa450edef68